--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="message-card">
       <h2>My Wishes for You</h2>
       <p>
-        You are not only my sister but also my best friend. On this Raksha Bandhan, I promise to always protect you and be by your side. Thank you for being my constant support and my partner in crime. 💫
+        You are not only my sister but also my friend. On this Raksha Bandhan, I promise to always protect you and be by your side. Thank you for always being goofy and cute. 😊 💫
       </p>
     </div>
 
     <div class="gallery">
-      <h2>Our Moments Together 📸</h2>
+      <h2>YOU 📸</h2>
       <div class="photos">
         <img src="img1.jpg" alt="Us 1" />
         <img src="img2.jpg" alt="Us 2" />
